compiler/tests/fa/errors/pure_vec_mut_fa.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
خالص تابع پرکن(n : صحیح) : صحیح:
    متغیر v : Vector<صحیح> = Vector {}
    v.push(n)
    بازگشت v.len()
پایان

تابع اصلی:
    چاپ(پرکن(3))
پایان
